Add undo-recent-deprecation option, improve default deprecation errors

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1995,8 +1995,7 @@
 % \begin{variable}{\g_@@_deprecation_on_tl, \g_@@_deprecation_off_tl}
 %   Some commands were more recently deprecated and not yet removed;
 %   only make these into errors if the user requests it.  This relies on
-%   two token lists, mostly filled up by calls to
-%   \cs{__kernel_patch_deprecation:nnNNpn} in each module.
+%   two token lists, filled up in \pkg{l3deprecation}.
 %    \begin{macrocode}
 \__kernel_if_debug:TF
   {
@@ -2017,82 +2016,6 @@
   }
 %    \end{macrocode}
 % \end{variable}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\__kernel_patch_deprecation:nnNNpn}
-% \begin{macro}{\@@_deprecation_aux:nnNnn}
-%   Grab a definition (at present, must be \cs{cs_new_protected:Npn} or \cs{cs_new:Npn}).
-%   Add to \cs{g_@@_deprecation_on_tl} some code that makes the
-%   defined macro |#3| outer (and defines it as an error).  Add to
-%   \cs{g_@@_deprecation_off_tl} the definition itself.  In both
-%   cases we undefine the token with \cs{tex_let:D} to avoid taking a
-%   potentially outer macro as the argument of some \pkg{expl3}
-%   function.  Finally, define the macro itself: if it is protected,
-%   make it produce a warning then redefine and call itself.  The macro
-%   initially takes no parameters:
-%   together with the \texttt{x}-expanding assignment and \cs{exp_not:n}
-%   this gives a convenient way of storing the macro's definition in
-%   itself in order to only produce the warning once for each macro.
-%   If debugging is disabled, \cs{__kernel_patch_deprecation:nnNNpn} lets the
-%   definition happen.
-%    \begin{macrocode}
-\__kernel_if_debug:TF
-  {
-    \cs_set_protected:Npn \__kernel_patch_deprecation:nnNNpn #1#2#3#4#5#
-      {
-        \if_meaning:w \cs_new_protected:Npn #3
-          \exp_after:wN \use_i:nn
-        \else:
-          \if_meaning:w \cs_new:Npn #3
-            \exp_after:wN \exp_after:wN \exp_after:wN \use_ii:nn
-          \else:
-            \__kernel_msg_error:nnx { kernel } { debug-unpatchable }
-              { \token_to_str:N #3 ~(for~deprecation) }
-            \exp_after:wN \exp_after:wN \exp_after:wN \use_none:nn
-          \fi:
-        \fi:
-        { \@@_deprecation_aux:nnNnn {#1} {#2} #4 {#5} }
-        { \@@_deprecation_expandable:nnNnn {#1} {#2} #4 {#5} }
-      }
-    \cs_set_protected:Npn \@@_deprecation_aux:nnNnn #1#2#3#4#5
-      {
-        \tl_gput_right:Nn \g_@@_deprecation_on_tl
-          {
-            \tex_let:D #3 \scan_stop:
-            \__kernel_deprecation_error:Nnn #3 {#2} {#1}
-          }
-        \tl_gput_right:Nn \g_@@_deprecation_off_tl
-          {
-            \tex_let:D #3 \scan_stop:
-            \cs_set_protected:Npn #3 #4 {#5}
-          }
-        \cs_new_protected:Npx #3
-          {
-            \exp_not:N \__kernel_msg_warning:nnxxx
-              { kernel } { deprecated-command }
-              {#1} { \token_to_str:N #3 } { \tl_to_str:n {#2} }
-            \exp_not:n { \cs_gset_protected:Npn #3 #4 {#5} }
-            \exp_not:N #3
-          }
-      }
-    \cs_set_protected:Npn \@@_deprecation_expandable:nnNnn #1#2#3#4#5
-      {
-        \tl_gput_right:Nn \g_@@_deprecation_on_tl
-          {
-            \tex_let:D #3 \scan_stop:
-            \__kernel_deprecation_error:Nnn #3 {#2} {#1}
-          }
-        \tl_gput_right:Nn \g_@@_deprecation_off_tl
-          {
-            \tex_let:D #3 \scan_stop:
-            \cs_set:Npn #3 #4 {#5}
-          }
-        \cs_new:Npn #3 #4 {#5}
-      }
-  }
-  { \cs_set_protected:Npn \__kernel_patch_deprecation:nnNNpn #1#2 { } }
-%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
