--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2429,7 +2429,7 @@ and all files in that bundle must be distributed together.
   {
     \@@_date_set:Nn #1 {#2}
     \exp_args:No \@@_date_compare:nNnT
-      {#1} > { \tex_year:D - \tex_month:D - \tex_day:D }
+      {#1} > { \c_sys_year_int - \c_sys_month_int - \c_sys_day_int }
       {
         \msg_error:nnxx { l3doc } { future-date }
           { \tl_to_str:N \l_@@_macro_argument_tl }
@@ -2450,7 +2450,7 @@ and all files in that bundle must be distributed together.
   {
     \@@_date_set:Nn \l_@@_tmpa_tl {#1}
     \exp_args:No \@@_date_compare:nNnT
-      { \l_@@_tmpa_tl } < { \tex_year:D - \tex_month:D - \tex_day:D }
+      { \l_@@_tmpa_tl } < { \c_sys_year_int - \c_sys_month_int - \c_sys_day_int }
       {
         \msg_error:nnxx { l3doc } { deprecated-function }
           { \tl_to_str:N \l_@@_macro_argument_tl }
