Move GetIdInfo from l3bootstrap to l3file
Since we don't use \GetIdInfo anymore (since a long time ago) there
is no good reason to define it before having all the nice l3tl tools

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2534,6 +2534,76 @@
 %</package>
 %    \end{macrocode}
 %
+% \subsection{GetIfInfo}
+%
+% \begin{macro}{\GetIdInfo}
+% \begin{macro}{\@@_id_info_auxi:w, \@@_id_info_auxii:w, \@@_id_info_auxiii:w}
+%   As documented in \pkg{expl3.dtx} this function extracts file name
+%   etc from an \textsc{svn} \texttt{Id} line.  This used to be how we
+%   got version number and so on in all modules, so it had to be defined
+%   in \pkg{l3bootstrap}.  Now it's more convenient to define it after
+%   we have set up quite a lot of tools, and \pkg{l3file} seems the
+%   least unreasonable place for it.
+%
+%   The idea here is to extract out the information needed from a standard
+%   \textsc{svn} \texttt{Id} line, but to avoid a line that would get
+%   changed when the file is checked in. Hence the fact that none of the
+%   lines here include both a dollar sign and the \texttt{Id} keyword!
+%    \begin{macrocode}
+\cs_new_protected:Npn \GetIdInfo
+  {
+    \group_begin:
+    \char_set_catcode_space:n { 32 }
+    \exp_after:wN
+    \group_end:
+    \@@_id_info_auxi:w
+  }
+%    \end{macrocode}
+%   A first check for a completely empty \textsc{svn} field. If that is
+%   not the case, there is a second case when a file created using
+%   \texttt{svn cp} but has not been checked in. That leaves a special
+%   marker \texttt{-1} version, which has no further data. Dealing
+%   correctly with that is the reason for the space in the line to use
+%   \cs{@@_id_info_auxii:w}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_id_info_auxi:w $ #1 $ #2
+  {
+    \tl_set:Nn \ExplFileDescription {#2}
+    \str_if_eq:nnTF {#1} { Id }
+      {
+        \tl_set:Nn \ExplFileDate { 0000/00/00 }
+        \tl_set:Nn \ExplFileName { [unknown] }
+        \tl_set:Nn \ExplFileExtension { [unknown~extension] }
+        \tl_set:Nn \ExplFileVersion {-1}
+      }
+      { \@@_id_info_auxii:w #1 ~ \q_stop }
+  }
+%    \end{macrocode}
+%   Here, |#1| is |Id|, |#2| is the file name, |#3| is the extension,
+%   |#4| is the version, |#5| is the check in date and |#6| is the check
+%   in time and user, plus some trailing spaces. If |#4| is the marker
+%   |-1| value then |#5| and |#6| are empty.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_id_info_auxii:w
+    #1 ~ #2.#3 ~ #4 ~ #5 ~ #6 \q_stop
+  {
+    \tl_set:Nn \ExplFileName {#2}
+    \tl_set:Nn \ExplFileExtension {#3}
+    \tl_set:Nn \ExplFileVersion {#4}
+    \str_if_eq:nnTF {#4} {-1}
+      { \tl_set:Nn \ExplFileDate { 0000/00/00 } }
+      { \@@_id_info_auxiii:w #5 - 0 - 0 - \q_stop }
+  }
+%    \end{macrocode}
+%   Convert an \textsc{svn}-style date into a \LaTeX{}-style one.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_id_info_auxiii:w #1 - #2 - #3 - #4 \q_stop
+  { \tl_set:Nn \ExplFileDate { #1/#2/#3 } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Messages}
 %
 %    \begin{macrocode}
