Typo (section level) [ci-skip]

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -320,17 +320,17 @@
 %   \end{texnote}
 % \end{function}
 %
-%\begin{function}[updated = 2012-02-10, EXP, pTF]{\ior_if_eof:N}
-%  \begin{syntax}
-%    \cs{ior_if_eof_p:N} \meta{stream} \\
-%    \cs{ior_if_eof:NTF} \meta{stream} \Arg{true code} \Arg{false code}
-%  \end{syntax}
-%  Tests if the end of a \meta{stream} has been reached during a reading
-%  operation. The test also returns a \texttt{true} value if
-%  the \meta{stream} is not open.
-%\end{function}
+% \begin{function}[updated = 2012-02-10, EXP, pTF]{\ior_if_eof:N}
+%   \begin{syntax}
+%     \cs{ior_if_eof_p:N} \meta{stream} \\
+%     \cs{ior_if_eof:NTF} \meta{stream} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Tests if the end of a \meta{stream} has been reached during a reading
+%   operation. The test also returns a \texttt{true} value if
+%   the \meta{stream} is not open.
+% \end{function}
 %
-% \section{Writing to files}
+% \subsection{Writing to files}
 %
 % \begin{function}[updated = 2012-06-05]{\iow_now:Nn, \iow_now:Nx, \iow_now:cn, \iow_now:cx}
 %   \begin{syntax}
@@ -1365,8 +1365,8 @@
 \cs_set_protected:Npn \iow_term:x { \iow_now:Nx \c_term_iow }
 \cs_new_protected:Npn \iow_term:n { \iow_now:Nn \c_term_iow }
 %    \end{macrocode}
-%\end{macro}
-%\end{macro}
+% \end{macro}
+% \end{macro}
 %
 % \subsubsection{Special characters for writing}
 %
